--- a/src/Home.css
+++ b/src/Home.css
@@ -5,6 +5,8 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     display: flex;
     flex-direction: column;
+    margin-top: 55px;
+    /* border: 1px solid red; */
 }
 
 .home__container {
