--- a/src/Home.css
+++ b/src/Home.css
@@ -139,3 +139,77 @@
     color: rgb(30, 28, 28);
     padding-top: 5px;
 }
+
+@media (max-width: 500px) {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    .home__container {
+        /* border: 0.5px solid red; */
+        /* background-color: black; */
+        max-width: 100vw;
+        margin-left: -5px;
+        overflow: scroll;
+        /* margin-bottom: 90px; */
+        margin-top: 20px;
+        padding-top: 70px;
+        padding-bottom: 40px;
+        padding-left: 200px;
+        z-index: 100;
+    }
+    .home__container::-webkit-scrollbar {
+        display: none;
+    }
+    .home__category {
+        padding: 10px 0;
+        padding-top: 20px;
+    }
+    .home__category>p {
+        font-weight: 500;
+        font-size: 12px;
+        color: rgb(49, 47, 47);
+        padding-bottom: 20px;
+    }
+    .home__category p span {
+        opacity: 0;
+        position: absolute;
+    }
+    .home__rowData {
+        /* border: 2px solid rebeccapurple; */
+        height: 450px !important;
+    }
+    .home_rowLeftContainerTitle {
+        font-size: 18px;
+        padding-top: 20px;
+        border-bottom: 0.75px solid rgba(207, 203, 203, 0.82);
+        padding: -5px;
+    }
+    .homerowLeftContainerProducts {
+        margin-left: -10px;
+        padding-left: 200px;
+        width: 100vw;
+        /* border: 1px solid red; */
+        overflow: scroll;
+        padding-bottom: 10px;
+        padding-top: 20px;
+    }
+    .homerowLeftContainerProducts::-webkit-scrollbar {
+        display: none;
+    }
+    .home__rowRightContainer {
+        visibility: hidden;
+    }
+    .home__actualProductsContents {
+        overflow: scroll;
+    }
+    .home__actualProductsContents::-webkit-scrollbar {
+        display: none;
+    }
+    .home__actualProductsHeading p {
+        font-size: 18px;
+        padding-top: 20px;
+        padding: -5px;
+    }
+}
