--- a/src/Product.css
+++ b/src/Product.css
@@ -17,3 +17,20 @@
     font-weight: 400;
     padding-top: -10px;
 }
+
+@media (max-width: 500px) {
+    .product {
+        margin-right: 10px;
+    }
+    .product img {
+        width: 100px;
+        height: 140px;
+    }
+    .product__title {
+        font-size: 15px;
+        text-align: center;
+    }
+    .product__price {
+        padding-top: -5px;
+    }
+}
